2008-06-10  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: Fixed tab placement bug.

2008-06-09  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: Fixed horizontal scrollbar bug.

2008-06-09  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: Fixed bug in
	  VisualToDocumentLocation

2008-06-09  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: Fixed tab stop calculation - it
	  should work better now. Refactored visual <--> document location
	  logic.

2008-06-06  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: fixed possible null reference
	  exception in VisualToDocumentLocation

2008-06-05  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: Improved support for non
	  monospaced font.

2008-06-05  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: fixed Bug 394285 - NRE in CaretThread

2008-06-04  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: Fixed possible div by zero
	  exception.

2008-06-03  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Use the OnDestroyed event instead of
	  Dispose, since with the latest changes in gtk#, Dispose is not
	  called anymore when a widget is destroyed.

2008-05-28  Michael Hutchinson <mhutchinson@novell.com> 

	* XmlSyntaxMode.xml: Fix CDATA end tag.

2008-05-27 David Makovský <yakeen@sannyas-on.net>
 
	* Mono.TextEditor/DefaultEditActions.cs: parse double value with invariant culture (Patch by Jérémie Laval).

2008-05-26  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: handled possible nullref.

2008-05-22  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Highlighting/SemanticRule.cs: fixed Bug 393118 - URL
	  is not underlined completely and indeed redirects to only the
	  domain

2008-05-22  Mike Krüger <mkrueger@novell.com> 
